// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardExpiresInput should match a snapshot for amex 1`] = `
<Formik
  initialValues={
    Object {
      "expiryDate": "",
    }
  }
  onSubmit={[MockFunction]}
>
  <Form>
    <form
      action="#"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <CardExpiresInput
        cardType="amex"
        className="some-class"
        disabled={false}
        id="expiryDate"
        labelText="Card Expires"
        name="expiryDate"
        required={true}
      >
        <Field
          name="expiryDate"
          validate={[Function]}
        >
          <div
            className="field some-class"
          >
            <div
              className="control"
            >
              <label
                className="label inline-block required-label"
                htmlFor="expiryDate"
              >
                Card Expires
              </label>
              <input
                autoComplete="expiryDate"
                className="input is-primary"
                data-test=""
                disabled={false}
                id="expiryDate"
                inputMode="numeric"
                maxLength={7}
                name="expiryDate"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="MM / YY"
                type="text"
                value=""
              />
            </div>
          </div>
        </Field>
      </CardExpiresInput>
    </form>
  </Form>
</Formik>
`;

exports[`CardExpiresInput should match a snapshot for an unknown card 1`] = `
<Formik
  initialValues={
    Object {
      "expiryDate": "",
    }
  }
  onSubmit={[MockFunction]}
>
  <Form>
    <form
      action="#"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <CardExpiresInput
        className="some-class"
        disabled={false}
        id="expiryDate"
        labelText="Card Expires"
        name="expiryDate"
        required={true}
      >
        <Field
          name="expiryDate"
          validate={[Function]}
        >
          <div
            className="field some-class"
          >
            <div
              className="control"
            >
              <label
                className="label inline-block required-label"
                htmlFor="expiryDate"
              >
                Card Expires
              </label>
              <input
                autoComplete="expiryDate"
                className="input is-primary"
                data-test=""
                disabled={false}
                id="expiryDate"
                inputMode="numeric"
                maxLength={7}
                name="expiryDate"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="MM / YY"
                type="text"
                value=""
              />
            </div>
          </div>
        </Field>
      </CardExpiresInput>
    </form>
  </Form>
</Formik>
`;

exports[`CardExpiresInput should match a snapshot for mastercard 1`] = `
<Formik
  initialValues={
    Object {
      "expiryDate": "",
    }
  }
  onSubmit={[MockFunction]}
>
  <Form>
    <form
      action="#"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <CardExpiresInput
        cardType="mastercard"
        className="some-class"
        disabled={false}
        id="expiryDate"
        labelText="Card Expires"
        name="expiryDate"
        required={true}
      >
        <Field
          name="expiryDate"
          validate={[Function]}
        >
          <div
            className="field some-class"
          >
            <div
              className="control"
            >
              <label
                className="label inline-block required-label"
                htmlFor="expiryDate"
              >
                Card Expires
              </label>
              <input
                autoComplete="expiryDate"
                className="input is-primary"
                data-test=""
                disabled={false}
                id="expiryDate"
                inputMode="numeric"
                maxLength={7}
                name="expiryDate"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="MM / YY"
                type="text"
                value=""
              />
            </div>
          </div>
        </Field>
      </CardExpiresInput>
    </form>
  </Form>
</Formik>
`;

exports[`CardExpiresInput should match a snapshot for visa 1`] = `
<Formik
  initialValues={
    Object {
      "expiryDate": "",
    }
  }
  onSubmit={[MockFunction]}
>
  <Form>
    <form
      action="#"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <CardExpiresInput
        cardType="visa"
        className="some-class"
        disabled={false}
        id="expiryDate"
        labelText="Card Expires"
        name="expiryDate"
        required={true}
      >
        <Field
          name="expiryDate"
          validate={[Function]}
        >
          <div
            className="field some-class"
          >
            <div
              className="control"
            >
              <label
                className="label inline-block required-label"
                htmlFor="expiryDate"
              >
                Card Expires
              </label>
              <input
                autoComplete="expiryDate"
                className="input is-primary"
                data-test=""
                disabled={false}
                id="expiryDate"
                inputMode="numeric"
                maxLength={7}
                name="expiryDate"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="MM / YY"
                type="text"
                value=""
              />
            </div>
          </div>
        </Field>
      </CardExpiresInput>
    </form>
  </Form>
</Formik>
`;
